--- a/setup-data.ipynb
+++ b/setup-data.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 54,
+            "execution_count": 63,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -10,8 +10,16 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Step 1\n",
+                "Read the actual cases and convert the data from wide format to row format"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 55,
+            "execution_count": 64,
             "metadata": {},
             "outputs": [
                 {
@@ -92,7 +100,7 @@
                             "3        1005        Barbour County     AL          1  2020-01-22      0"
                         ]
                     },
-                    "execution_count": 55,
+                    "execution_count": 64,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -107,7 +115,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 56,
+            "execution_count": 65,
             "metadata": {},
             "outputs": [
                 {
@@ -237,7 +245,7 @@
                             "9  1017          0 2020-01-22       Chambers County     AL"
                         ]
                     },
-                    "execution_count": 56,
+                    "execution_count": 65,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -255,8 +263,16 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Step 2\n",
+                "Read the forcasting data from the multiple files"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 57,
+            "execution_count": 66,
             "metadata": {},
             "outputs": [
                 {
@@ -287,7 +303,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 58,
+            "execution_count": 67,
             "metadata": {},
             "outputs": [
                 {
@@ -417,7 +433,7 @@
                             "9  BPagano 2020-10-24   12      22717  1 wk ahead inc case"
                         ]
                     },
-                    "execution_count": 58,
+                    "execution_count": 67,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -437,8 +453,16 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Step 3\n",
+                "Merge the two datasets together based on predication target date and the county"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 59,
+            "execution_count": 68,
             "metadata": {},
             "outputs": [
                 {
@@ -613,7 +637,7 @@
                             "9          Bethel Census Area     AK  "
                         ]
                     },
-                    "execution_count": 59,
+                    "execution_count": 68,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -631,8 +655,15 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Write the dataset to a file"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 60,
+            "execution_count": 69,
             "metadata": {},
             "outputs": [],
             "source": [
